--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
-    "mdbreact": "^5.2.0",
     "react": "^18.1.0",
     "react-calendar": "^3.7.0",
     "react-cookie": "^4.1.1",
@@ -26,6 +25,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
+    "timeago.js": "^4.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
